--- a/_talks/2016-01-afeka.md
+++ b/_talks/2016-01-afeka.md
@@ -4,7 +4,7 @@ collection: talks
 type: "Talk"
 permalink: /talks/2016-01-afeka
 venue: "Afeka College of Engineering"
-date: 2016-01
+date: 2016-01-10
 location: "Tel Aviv, Israel"
 ---
 
