--- a/_talks/2016-01-10-afeka.md
+++ b/_talks/2016-01-10-afeka.md
@@ -2,7 +2,7 @@
 title: "Understanding Impaired Speech"
 collection: talks
 type: "Talk"
-permalink: /talks/2016-01-afeka
+permalink: /talks/2016-01-10-afeka
 venue: "Afeka College of Engineering"
 date: 2016-01-10
 location: "Tel Aviv, Israel"
