--- a/_talks/2017-09-20-elex.md
+++ b/_talks/2017-09-20-elex.md
@@ -8,4 +8,4 @@ date: 2017-09-20
 location: "Leiden, Netherlands"
 ---
 
-Presentation on associated paper at [eLex 2017](https://elex.link/elex2017/) conference on electronic lexicography in Leiden, Netherlands. Associated with K Dictionaries. Presentation [available on YouTube](https://www.youtube.com/watch?v=MUc8ctSxC4k).
+Presentation on associated paper at [eLex 2017](https://elex.link/elex2017/) conference on electronic lexicography in Leiden, Netherlands. Associated with K Dictionaries. Presentation available [on YouTube](https://www.youtube.com/watch?v=MUc8ctSxC4k).
