--- a/_publications/2017-06-18-tiad.md
+++ b/_publications/2017-06-18-tiad.md
@@ -6,10 +6,9 @@ excerpt: 'In this paper, we present a new set of experiments on automatically ge
 date: 2017-06-18
 venue: 'Proceedings of the LDK workshops: OntoLex, TIAD and Challenges for Wordnets'
 paperurl: 'http://ceur-ws.org/Vol-1899/baseline_report.pdf'
-# citation: 'Your Name, You. (2009). &quot;Paper Title Number 1.&quot; <i>Journal 1</i>. 1(1).'
+citation: 'Alper, M. (2017). Auto-generating bilingual dictionaries: Results of the TIAD-2017 shared task baseline algorithm. In J. McCrae et al. Proceedings of the LDK workshops: OntoLex, TIAD and Challenges for Wordnets. Galway, Ireland, June 18, 2017.'
 ---
-This paper is about the number 1. The number 2 is left for future work.
 
 [Download paper here](http://academicpages.github.io/files/paper1.pdf)
 
-<!-- Recommended citation: Your Name, You. (2009). "Paper Title Number 1." <i>Journal 1</i>. 1(1). -->
+Recommended citation: Alper, M. (2017). Auto-generating bilingual dictionaries: Results of the TIAD-2017 shared task baseline algorithm. In J. McCrae et al. Proceedings of the LDK workshops: OntoLex, TIAD and Challenges for Wordnets. Galway, Ireland, June 18, 2017.
