--- a/_talks/2022-12-07-lmu.md
+++ b/_talks/2022-12-07-lmu.md
@@ -1,7 +1,7 @@
 ---
 title: "“Deeplomatics”: Deep learning for automatic analysis of cuneiform texts"
 collection: talks
-type: "Conference proceedings talk"
+type: "Talk"
 permalink: /talks/2022-12-07-lmu
 venue: "AI-Humanity-Society: LMU-TAU Workshop for Early-Career Researchers"
 date: 2022-12-07-lmu
