--- a/_publications/2023-03-23-ibb.md
+++ b/_publications/2023-03-23-ibb.md
@@ -2,7 +2,7 @@
 title: "Is BERT Blind? Exploring the Effect of Vision-and-Language Pretraining on Visual Language Understanding"
 collection: publications
 permalink: /publication/2023-03-23-ibb
-# excerpt: 'This paper is about the number 1. The number 2 is left for future work.'
+excerpt: 'Project page: https://isbertblind.github.io'
 date: 2023-03-23
 venue: 'CVPR'
 paperurl: 'https://arxiv.org/abs/2303.12513'
