--- a/_publications/2023-07-17-hhi.md
+++ b/_publications/2023-07-17-hhi.md
@@ -6,5 +6,5 @@ excerpt: 'Project page: https://learning-interactions.github.io'
 date: 2023-07-17
 venue: 'ICCV'
 paperurl: 'https://arxiv.org/abs/2304.14104'
-citation: 'Morris Alper and Hadar Averbuch-Elor (2023). Learning Human-Human Interactions in Images from Weak Textual Supervision.
+citation: 'Morris Alper and Hadar Averbuch-Elor (2023). Learning Human-Human Interactions in Images from Weak Textual Supervision.'
 ---
