--- a/_publications/2023-10-25-kiki.md
+++ b/_publications/2023-10-25-kiki.md
@@ -2,7 +2,7 @@
 title: "Kiki or Bouba? Sound Symbolism in Vision-and-Language Models"
 collection: publications
 permalink: /publication/2023-10-25-kiki
-excerpt: 'Project page: kiki-bouba.github.io'
+excerpt: 'Project page: https://kiki-bouba.github.io'
 date: 2023-10-25
 venue: 'NeurIPS (spotlight)'
 paperurl: 'https://arxiv.org/abs/2310.16781'
